# rust-kpathsea

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: MSVC_STATIC_LINK_SCOPE.md
kpathsea/: Cargo.toml  build.rs
kpathsea/src/: lib.rs  subprocess.rs
kpathsea/tests/: find_file.rs  no_backend.rs  subprocess.rs  texinputs_fallback.rs
kpathsea_sys/: Cargo.toml  build.rs
kpathsea_sys/common/: README.md  config.h
kpathsea_sys/common/kpathsea/: paths.h
kpathsea_sys/msvc/kpathsea/: c-auto.h
kpathsea_sys/src/: bindings.rs  bindings_windows.rs  lib.rs
kpathsea_sys/unix/kpathsea/: c-auto.h
