[package]
name = "kpathsea_sys"
version = "0.1.3"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2024"
links = "kpathsea"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/rust-kpathsea"
homepage = "https://github.com/dginev/rust-kpathsea"
documentation = "https://docs.rs/crate/kpathsea_sys"
description = """
Bindings to libkpathsea for efficient file management in the TeX ecosystem
"""
categories = ["external-ffi-bindings"]

[lib]
name = "kpathsea_sys"

[build-dependencies]
pkg-config = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(kpathsea_docs_rs)'] }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "kpathsea_docs_rs"]
rustdoc-args = ["--cfg", "kpathsea_docs_rs"]
