[package]
name = "kpathsea_sys"
version = "0.2.1"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2024"
links = "kpathsea"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/rust-kpathsea"
homepage = "https://github.com/dginev/rust-kpathsea"
documentation = "https://docs.rs/crate/kpathsea_sys"
description = """
Bindings to libkpathsea for efficient file management in the TeX ecosystem
"""
categories = ["external-ffi-bindings"]

[lib]
name = "kpathsea_sys"

[build-dependencies]
pkg-config = "0.3"
# Windows DLL probe: locate kpsewhich (and thus TeX Live's kpathsea DLL)
# with the same PATH rules as the runtime, and find the MSVC tools that
# synthesize the import library. Both are inert off Windows.
which = "8"
cc = "1"

# `cfg(kpathsea_linked)` is registered via `cargo:rustc-check-cfg` in
# build.rs, next to where the cfg itself is emitted.
#
# No docs.rs cfg override needed anymore: the build script no longer panics
# when libkpathsea is absent, so docs.rs builds (which have no TeX) work
# out of the box in the unlinked configuration.
