[package]
name = "kpathsea_sys"
version = "0.2.3"
authors = ["Deyan Ginev <deyan.ginev@gmail.com>"]
edition = "2024"
links = "kpathsea"
build = "build.rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dginev/rust-kpathsea"
homepage = "https://github.com/dginev/rust-kpathsea"
documentation = "https://docs.rs/crate/kpathsea_sys"
description = """
Bindings to libkpathsea for efficient file management in the TeX ecosystem
"""
categories = ["external-ffi-bindings"]

[lib]
name = "kpathsea_sys"

[features]
# Build a static libkpathsea from source with `cc`, instead of locating a
# system/DLL library — an in-process, self-contained link (on Windows, no
# runtime kpathsealibw64.dll). Supported on windows-msvc and Unix (verified on
# Linux). The kpathsea source is NOT bundled (it is LGPL; this crate stays
# MIT/Apache): it is fetched at build time (pinned commit) or taken from
# `KPATHSEA_SRC_DIR`. Only our own config headers live in-tree (`common/`,
# `msvc/`, `unix/`, all original). Opt-in; off by default. See `common/README.md`.
build_from_source = []

[build-dependencies]
pkg-config = "0.3"
# Windows DLL probe: locate kpsewhich (and thus TeX Live's kpathsea DLL)
# with the same PATH rules as the runtime, and find the MSVC tools that
# synthesize the import library. Both are inert off Windows.
which = "8"
cc = "1"

# `cfg(kpathsea_linked)` is registered via `cargo:rustc-check-cfg` in
# build.rs, next to where the cfg itself is emitted.
#
# No docs.rs cfg override needed anymore: the build script no longer panics
# when libkpathsea is absent, so docs.rs builds (which have no TeX) work
# out of the box in the unlinked configuration.
